[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/traps/planttrap/piantafase2.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/traps/planttrap/piantaidle.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/traps/planttrap/piantafase4.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/traps/planttrap/piantafase5.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/traps/planttrap/piantafase3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/traps/planttrap/piantafase1.png" type="Texture" id=6]
[ext_resource path="res://src/traps/Plant.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": false,
"name": "back",
"speed": 11.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "eat",
"speed": 11.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 182.5, 187.5 )

[node name="Plant" type="Area2D"]
z_index = -1
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -73.5, -21.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Plant_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
